Bug 163761 - Long RTL text in Calc cell (copied from Writer originally) renders "over itself"
Summary: Long RTL text in Calc cell (copied from Writer originally) renders "over itself"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RTL
  Show dependency treegraph
 
Reported: 2024-11-04 12:39 UTC by Eyal Rozenberg
Modified: 2025-06-24 20:20 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Document with bug manifesting, Row 1 column 2 (11.26 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-11-04 12:39 UTC, Eyal Rozenberg
Details
Screenshot of bug manifesting - LO Calc 25.2 nightly (41.59 KB, image/png)
2024-11-04 12:42 UTC, Eyal Rozenberg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eyal Rozenberg 2024-11-04 12:39:52 UTC
Created attachment 197394 [details]
Document with bug manifesting, Row 1 column 2

Consider the attached document. When viewing its text in the formula/cell value editing bar, I see (at least) two lines at least overlap. If I remove a character or two - this goes away.

Seen with:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c8371b5f1a84191d38185820915f0d93741df1fe
CPU threads: 4; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: en-US (en_IL); UI: en-US
Calc: threaded
Comment 1 Eyal Rozenberg 2024-11-04 12:42:45 UTC
Created attachment 197395 [details]
Screenshot of bug manifesting - LO Calc 25.2 nightly
Comment 2 Bryan Zanoli 2024-11-05 02:19:04 UTC
Thank you for submitted this bug report. I attempted to recreate the issue and did not see it appear in either: 
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5debf32cf09e865f2b241df3edd8461b92b5c1bf
CPU threads: 2; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

or the current version: 
Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 2; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Have you attempted to recreate this issue on another system?
Comment 3 Buovjaga 2025-02-25 16:01:43 UTC
Bibisected with linux-64-7.5 to 9c2eb9c872bb10049fcb0217842b3bb849c27a22
tdf#373494: Correctly drop NotDef glyphs in mixed direction fallback runs

Typo in the commit message, should be tdf#73494

Seen on Linux (also with gen UI), but not on Windows.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b4059c4b9ae2230d9c6d722d457dca2216ddd581
CPU threads: 2; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 4 Eyal Rozenberg 2025-02-25 22:27:05 UTC
Thanks Ilmari, sorry for not replying to Bryan's question earlier, I somehow marked that email as read without handling it :-(
Comment 5 Commit Notification 2025-06-20 07:01:36 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7cafd6648d991d9f25466766042416e0c686074b

tdf#163761 Fix for tofu inside mixed-direction fallback runs in GUI text

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-06-24 12:53:15 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/2a3effb172c107e783e18307059a0337e31a9c7b

tdf#163761 Fix for tofu inside mixed-direction fallback runs in GUI text

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.