tdf#163761 Fix for tofu inside mixed-direction fallback runs in GUI text

Fixed a bug inside MultiSalLayout::ImplAdjustMultiLayout() that caused
tofu characters and improper position adjustment for certain UI text
with bidi fallback runs. The root cause was an implementation error
causing the current glyph index in the base layout to outpace the
current fallback run.

Regression from commit 9c2eb9c872bb10049fcb0217842b3bb849c27a22
(tdf#373494: Correctly drop NotDef glyphs in mixed direction fallback runs)

Change-Id: I7c16943866bdd465cc3c2c1f8540b38d2d4d529c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186720
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
(cherry picked from commit 7cafd6648d991d9f25466766042416e0c686074b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186738
Reviewed-by: Khaled Hosny <khaled@libreoffice.org>